5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1807_2564.log
== TEST (2019-06-06 16:30:00) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2))


-- ERROR:
File "XXXX", line 8
    while (size(Ngols) == size(Ngols2))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:04) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:36) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	vitoria = 0
	empates = 0
	derrotas = 0 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:44) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	vitoria = 0
	empates = 0
	derrotas = 0 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:33:02) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	vitoria = 0
	empates = 0
	derrotas = 0 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:46:14) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	vitoria = 0
	empates = 0
	derrotas = 0 
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:46:44) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
vetC = zeros(3 , dtype = int)
i = 0

while (size(Ngols) == size(Ngols2)):
	vitoria = 0
	empates = 0
	derrotas = 0 
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:09) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)
i = 0

for 
	


-- ERROR:
File "XXXX", line 8
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:13) 
-- CODE:
#Leitura
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Ngols = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:35) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:12:48) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:12:56) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- EXECUTION TIME:
1.22588
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[9 6 4 4 3 5 3 4 2 3 1 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[1 3 9 2 1 2 1 2 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  3  2  2  2  1  1  2  2  1  1  2  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:13:16) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- EXECUTION TIME:
1.1501
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[9 6 4 4 3 5 3 4 2 3 1 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[1 3 9 2 1 2 1 2 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  3  2  2  2  1  1  2  2  1  1  2  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:11) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:24) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:15:06) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0, size(Ngols)):
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:16:44) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(0 , dtype = int)

for i in range(3, size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:17:13) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(0 , dtype = int)

for i in range(3, size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(Ngols)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:17:53) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:18:30) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(0 , dtype = int)

for i in range(3 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:19:02) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:19:23) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:20:23) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:21:30) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:21:32) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:21:35) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)

for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
print(result)
	


-- EXECUTION TIME:
1.22628
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 1 1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
Numero de gols efetuados por partida: Numero de gols efetuados pelo adversario: [1 1 1]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
Numero de gols efetuados por partida: Numero de gols efetuados pelo adversario: [1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:22:54) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:24:32) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:27:43) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:28:39) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
	for i in range(0 , size(Ngols)):
	#Vitorias
		if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
		elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
		elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
	print(result)
	


-- ERROR:
File "XXXX", line 8
    for i in range(0 , size(Ngols)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:28:46) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:30:37) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
	for i in range(0 , size(Ngols)):
	#Vitorias
		if(Ngols[i] > Ngols2[i]):
			Ngols[0] = Ngols[0] + 1
	#Empates
		elif(Ngols[i] == Ngols2[i]):
			Ngols[1] = Ngols[1] + 1
	#Derrotas
		elif(Ngols[i] < Ngols2[i]):
			Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
File "XXXX", line 8
    for i in range(0 , size(Ngols)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:30:46) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
	for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
File "XXXX", line 8
    for i in range(0 , size(Ngols)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:30:51) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = ones(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:31:01) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		Ngols[0] = Ngols[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		Ngols[1] = Ngols[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		Ngols[2] = Ngols[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:32:08) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		result[0] = result[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		result[1] = result[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		result[2] = result[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:32:36) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		result[0] = result[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		result[1] = result[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		result[2] = result[2] + 1
	# O Caralho do Resultado
print(result)
	


-- EXECUTION TIME:
1.22596
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:32:42) 
-- CODE:
#Leitura
from numpy import*
Ngols = array(eval(input("Numero de gols efetuados por partida: ")))
Ngols2 = array(eval(input("Numero de gols efetuados pelo adversario: ")))
#Vetor de contagem
result = zeros(3 , dtype = int)
#Condição
for i in range(0 , size(Ngols)):
	#Vitorias
	if(Ngols[i] > Ngols2[i]):
		result[0] = result[0] + 1
	#Empates
	elif(Ngols[i] == Ngols2[i]):
		result[1] = result[1] + 1
	#Derrotas
	elif(Ngols[i] < Ngols2[i]):
		result[2] = result[2] + 1
	# O Caralho do Resultado
print(result)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
